--- a/index.html
+++ b/index.html
@@ -11,37 +11,37 @@
 </head>
 
 <body>
-    <div class="chat-box">
-        <div class="chat-content">
-            <div class="title-box">
+    <div class="chatBox">
+        <div class="chatContent">
+            <div class="titleBox">
                 Atendimento on-line
             </div>
             <div class="boxChat" id="contentBox">
                 <div class="atendente" id="customerDiv">
-                    <p class="atendente-title">
+                    <p class="atendentTitle">
                         Atendente diz:
                     </p>
-                    <p class="atendente-msg">
+                    <p class="atendentMsg">
                         Blabla blabla blabla
                     </p>
                     <p class="atendente-title">
                         Atendente diz:
                     </p>
-                    <p class="atendente-msg">
+                    <p class="atendentMsg">
                         Blabla blabla blabla
                     </p>
                 </div>
                 <div class="cliente" id="clientDiv">
-                    <p class="cliente-title">
+                    <p class="clientTitle">
                         Você diz:
                     </p>
-                    <p class="cliente-msg">
+                    <p class="clientMsg">
                         Blabla blabla blabla
                     </p>
                     <p class="cliente-title">
                         Você diz:
                     </p>
-                    <p class="cliente-msg">
+                    <p class="clientMsg">
                         Blabla blabla blabla
                     </p>
                 </div>
